stryker/Metadata/unpackaged/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>No_Of_Students__c</fullName>
        <label>No Of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>S.No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Class</relationshipLabel>
        <relationshipName>Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>